vlib/qlang/qlang-bison.output
Grammar

    0 $accept: input "end of program"

    1 input: non_assignment_expression "end of program"
    2      | statements_with_return "end of program"
    3      | non_return_statements "end of program"
    4      | template "end of program"

    5 statements: statement
    6           | statements statement

    7 non_return_statements: non_return_statement
    8                      | non_return_statements non_return_statement

    9 statements_with_return: return_statement
   10                       | non_return_statements return_statement

   11 statement_block: '{' statements '}'

   12 lambda_block: '{' expression '}'
   13             | '{' statements_with_return '}'
   14             | '{' non_return_statements '}'

   15 namelist: "name"
   16         | namelist ',' "name"

   17 lambda: lambda_block
   18       | "'function'" '(' namelist ')' lambda_block

   19 statement: non_return_statement
   20          | return_statement

   21 non_return_statement: if_statement
   22                     | for_statement
   23                     | while_statement
   24                     | break_statement
   25                     | continue_statement
   26                     | impure_expression ';'

   27 if_statement_start: "'if'" '(' expression ')' statement_block
   28                   | if_statement_start "'else'" "'if'" '(' expression ')' statement_block

   29 if_statement: if_statement_start
   30             | if_statement_start "'else'" statement_block

   31 for_statement: "'for'" '(' optional_arglist ';' optional_arglist ';' optional_arglist ')' statement_block

   32 while_statement: "'while'" '(' expression ')' statement_block

   33 return_statement: "'return'" ';'
   34                 | "'return'" non_assignment_expression ';'

   35 break_statement: "'break'" ';'

   36 continue_statement: "'continue'" ';'

   37 arglist: expression
   38        | arglist ',' expression

   39 optional_arglist: /* empty */
   40                 | arglist

   41 expression: non_assignment_expression
   42           | assignment

   43 assignment_target: variable
   44                  | property_call
   45                  | postfix_expression '[' expression ']'

   46 assignment_source: assignment
   47                  | non_assignment_expression

   48 assignment: assignment_target '=' assignment_source
   49           | assignment_target "'+='" assignment_source
   50           | assignment_target "'-='" assignment_source
   51           | assignment_target "'*='" assignment_source
   52           | assignment_target "'/='" assignment_source
   53           | assignment_target "'%='" assignment_source

   54 basic_expression: literal
   55                 | variable
   56                 | lambda
   57                 | '(' expression ')'
   58                 | dollar_call

   59 impure_expression: postcrement
   60                  | precrement
   61                  | assignment
   62                  | function_call
   63                  | method_call

   64 postfix_expression: basic_expression
   65                   | slice
   66                   | subscript
   67                   | postcrement
   68                   | property_call
   69                   | method_call
   70                   | function_call

   71 slice: postfix_expression '[' expression ':' expression ']'

   72 subscript: postfix_expression '[' expression ']'

   73 postcrement: postfix_expression "'++'"
   74            | postfix_expression "'--'"

   75 function_call: basic_expression '(' optional_arglist ')'

   76 property_call: '.' "name"
   77              | postfix_expression '.' "name"

   78 method_call: '.' basic_expression '(' optional_arglist ')'
   79            | postfix_expression '.' basic_expression '(' optional_arglist ')'

   80 dollar_call: "$NUM"
   81            | "$NAME"

   82 unary_expression: postfix_expression
   83                 | precrement
   84                 | cast
   85                 | '-' unary_expression
   86                 | '+' unary_expression
   87                 | '!' unary_expression

   88 precrement: "'++'" unary_expression
   89           | "'--'" unary_expression

   90 cast: '(' "'bool'" ')' basic_expression
   91     | '(' "'int'" ')' basic_expression
   92     | '(' "'uint'" ')' basic_expression
   93     | '(' "'intlist'" ')' basic_expression
   94     | '(' "'real'" ')' basic_expression
   95     | '(' "'string'" ')' basic_expression
   96     | '(' "'obj'" ')' basic_expression
   97     | '(' "'objlist'" ')' basic_expression
   98     | '(' "'datetime'" ')' basic_expression
   99     | '(' "'date'" ')' basic_expression
  100     | '(' "'time'" ')' basic_expression

  101 multiplication_priority: unary_expression
  102                        | multiplication_priority '*' unary_expression
  103                        | multiplication_priority '/' unary_expression
  104                        | multiplication_priority '%' unary_expression

  105 addition_priority: multiplication_priority
  106                  | addition_priority '+' multiplication_priority
  107                  | addition_priority '-' multiplication_priority

  108 comparable: addition_priority
  109           | unary_expression "'has'" unary_expression
  110           | unary_expression "'has'" junction
  111           | unary_expression "'=~'" "regex literal"
  112           | unary_expression "'!~'" "regex literal"
  113           | addition_priority "'as'" "'bool'"
  114           | addition_priority "'as'" "'int'"
  115           | addition_priority "'as'" "'uint'"
  116           | addition_priority "'as'" "'intlist'"
  117           | addition_priority "'as'" "'real'"
  118           | addition_priority "'as'" "'string'"
  119           | addition_priority "'as'" "'obj'"
  120           | addition_priority "'as'" "'objlist'"
  121           | addition_priority "'as'" "'datetime'"
  122           | addition_priority "'as'" "'date'"
  123           | addition_priority "'as'" "'time'"
  124           | format_call

  125 format_call: addition_priority "'as'" basic_expression '(' optional_arglist ')'

  126 conjunction_priority: equality_priority
  127                     | conjunction_priority "'&&'" equality_priority

  128 disjunction_priority: conjunction_priority
  129                     | disjunction_priority "'||'" conjunction_priority

  130 ternary_priority: disjunction_priority
  131                 | disjunction_priority '?' disjunction_priority ':' ternary_priority

  132 comparison_priority: comparable
  133                    | comparison_priority '<' comparable
  134                    | comparison_priority '>' comparable
  135                    | comparison_priority "'<='" comparable
  136                    | comparison_priority "'>='" comparable
  137                    | comparison_priority "'<=>'" comparable

  138 equality_priority: comparison_priority
  139                  | equality_priority "'=='" comparison_priority
  140                  | equality_priority "'=='" junction
  141                  | equality_priority "'!='" comparison_priority
  142                  | equality_priority "'!='" junction

  143 non_assignment_expression: ternary_priority

  144 junction: unary_expression '|' unary_expression
  145         | junction '|' unary_expression

  146 literal: scalar_literal
  147        | list_literal
  148        | dic_literal

  149 scalar_literal: "int literal"
  150               | "real literal"
  151               | "string literal"
  152               | "null literal"

  153 list_literal: '[' optional_arglist ']'

  154 kv_key: "name"
  155       | "string literal"

  156 kv_pairs: kv_key ':' expression
  157         | kv_pairs ',' kv_key ':' expression

  158 dic_literal: '{' kv_pairs '}'

  159 variable: "name"

  160 template: template_expression
  161         | template template_expression

  162 template_expression: "template literal substring"
  163                    | "$(" expression ')'
  164                    | "$(" statements_with_return ')'


Terminals, with rules where they appear

"end of program" (0) 0 1 2 3 4
'!' (33) 87
'%' (37) 104
'(' (40) 18 27 28 31 32 57 75 78 79 90 91 92 93 94 95 96 97 98 99 100
    125
')' (41) 18 27 28 31 32 57 75 78 79 90 91 92 93 94 95 96 97 98 99 100
    125 163 164
'*' (42) 102
'+' (43) 86 106
',' (44) 16 38 157
'-' (45) 85 107
'.' (46) 76 77 78 79
'/' (47) 103
':' (58) 71 131 156 157
';' (59) 26 31 33 34 35 36
'<' (60) 133
'=' (61) 48
'>' (62) 134
'?' (63) 131
'[' (91) 45 71 72 153
']' (93) 45 71 72 153
'{' (123) 11 12 13 14 158
'|' (124) 144 145
'}' (125) 11 12 13 14 158
error (256)
"int literal" (258) 149
"real literal" (259) 150
"template literal substring" (260) 162
"string literal" (261) 151 155
"regex literal" (262) 111 112
"null literal" (263) 152
"'++'" (264) 73 88
"'+='" (265) 49
"'--'" (266) 74 89
"'-='" (267) 50
"'*='" (268) 51
"'/='" (269) 52
"'%='" (270) 53
"'=='" (271) 139 140
"'!='" (272) 141 142
"'>='" (273) 136
"'<='" (274) 135
"'<=>'" (275) 137
"'=~'" (276) 111
"'!~'" (277) 112
"'&&'" (278) 127
"'||'" (279) 129
"'has'" (280) 109 110
"'if'" (281) 27 28
"'else'" (282) 28 30
"'for'" (283) 31
"'while'" (284) 32
"'break'" (285) 35
"'continue'" (286) 36
"'function'" (287) 18
"'return'" (288) 33 34
"'as'" (289) 113 114 115 116 117 118 119 120 121 122 123 125
"'bool'" (290) 90 113
"'int'" (291) 91 114
"'uint'" (292) 92 115
"'intlist'" (293) 93 116
"'real'" (294) 94 117
"'string'" (295) 95 118
"'obj'" (296) 96 119
"'objlist'" (297) 97 120
"'datetime'" (298) 98 121
"'date'" (299) 99 122
"'time'" (300) 100 123
"name" (301) 15 16 76 77 154 159
"$(" (302) 163 164
"$NUM" (303) 80
"$NAME" (304) 81


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
input (72)
    on left: 1 2 3 4, on right: 0
statements (73)
    on left: 5 6, on right: 6 11
non_return_statements (74)
    on left: 7 8, on right: 3 8 10 14
statements_with_return (75)
    on left: 9 10, on right: 2 13 164
statement_block (76)
    on left: 11, on right: 27 28 30 31 32
lambda_block (77)
    on left: 12 13 14, on right: 17 18
namelist (78)
    on left: 15 16, on right: 16 18
lambda (79)
    on left: 17 18, on right: 56
statement (80)
    on left: 19 20, on right: 5 6
non_return_statement (81)
    on left: 21 22 23 24 25 26, on right: 7 8 19
if_statement_start (82)
    on left: 27 28, on right: 28 29 30
if_statement (83)
    on left: 29 30, on right: 21
for_statement (84)
    on left: 31, on right: 22
while_statement (85)
    on left: 32, on right: 23
return_statement (86)
    on left: 33 34, on right: 9 10 20
break_statement (87)
    on left: 35, on right: 24
continue_statement (88)
    on left: 36, on right: 25
arglist (89)
    on left: 37 38, on right: 38 40
optional_arglist (90)
    on left: 39 40, on right: 31 75 78 79 125 153
expression (91)
    on left: 41 42, on right: 12 27 28 32 37 38 45 57 71 72 156 157
    163
assignment_target (92)
    on left: 43 44 45, on right: 48 49 50 51 52 53
assignment_source (93)
    on left: 46 47, on right: 48 49 50 51 52 53
assignment (94)
    on left: 48 49 50 51 52 53, on right: 42 46 61
basic_expression (95)
    on left: 54 55 56 57 58, on right: 64 75 78 79 90 91 92 93 94 95
    96 97 98 99 100 125
impure_expression (96)
    on left: 59 60 61 62 63, on right: 26
postfix_expression (97)
    on left: 64 65 66 67 68 69 70, on right: 45 71 72 73 74 77 79 82
slice (98)
    on left: 71, on right: 65
subscript (99)
    on left: 72, on right: 66
postcrement (100)
    on left: 73 74, on right: 59 67
function_call (101)
    on left: 75, on right: 62 70
property_call (102)
    on left: 76 77, on right: 44 68
method_call (103)
    on left: 78 79, on right: 63 69
dollar_call (104)
    on left: 80 81, on right: 58
unary_expression (105)
    on left: 82 83 84 85 86 87, on right: 85 86 87 88 89 101 102 103
    104 109 110 111 112 144 145
precrement (106)
    on left: 88 89, on right: 60 83
cast (107)
    on left: 90 91 92 93 94 95 96 97 98 99 100, on right: 84
multiplication_priority (108)
    on left: 101 102 103 104, on right: 102 103 104 105 106 107
addition_priority (109)
    on left: 105 106 107, on right: 106 107 108 113 114 115 116 117
    118 119 120 121 122 123 125
comparable (110)
    on left: 108 109 110 111 112 113 114 115 116 117 118 119 120 121
    122 123 124, on right: 132 133 134 135 136 137
format_call (111)
    on left: 125, on right: 124
conjunction_priority (112)
    on left: 126 127, on right: 127 128 129
disjunction_priority (113)
    on left: 128 129, on right: 129 130 131
ternary_priority (114)
    on left: 130 131, on right: 131 143
comparison_priority (115)
    on left: 132 133 134 135 136 137, on right: 133 134 135 136 137
    138 139 141
equality_priority (116)
    on left: 138 139 140 141 142, on right: 126 127 139 140 141 142
non_assignment_expression (117)
    on left: 143, on right: 1 34 41 47
junction (118)
    on left: 144 145, on right: 110 140 142 145
literal (119)
    on left: 146 147 148, on right: 54
scalar_literal (120)
    on left: 149 150 151 152, on right: 146
list_literal (121)
    on left: 153, on right: 147
kv_key (122)
    on left: 154 155, on right: 156 157
kv_pairs (123)
    on left: 156 157, on right: 157 158
dic_literal (124)
    on left: 158, on right: 148
variable (125)
    on left: 159, on right: 43 55
template (126)
    on left: 160 161, on right: 4 161
template_expression (127)
    on left: 162 163 164, on right: 160 161


State 0

    0 $accept: . input "end of program"

    '('                           shift, and go to state 1
    '['                           shift, and go to state 2
    '{'                           shift, and go to state 3
    '.'                           shift, and go to state 4
    "int literal"                 shift, and go to state 5
    "real literal"                shift, and go to state 6
    "template literal substring"  shift, and go to state 7
    "string literal"              shift, and go to state 8
    "null literal"                shift, and go to state 9
    '+'                           shift, and go to state 10
    "'++'"                        shift, and go to state 11
    '-'                           shift, and go to state 12
    "'--'"                        shift, and go to state 13
    '!'                           shift, and go to state 14
    "'if'"                        shift, and go to state 15
    "'for'"                       shift, and go to state 16
    "'while'"                     shift, and go to state 17
    "'break'"                     shift, and go to state 18
    "'continue'"                  shift, and go to state 19
    "'function'"                  shift, and go to state 20
    "'return'"                    shift, and go to state 21
    "name"                        shift, and go to state 22
    "$("                          shift, and go to state 23
    "$NUM"                        shift, and go to state 24
    "$NAME"                       shift, and go to state 25

    input                      go to state 26
    non_return_statements      go to state 27
    statements_with_return     go to state 28
    lambda_block               go to state 29
    lambda                     go to state 30
    non_return_statement       go to state 31
    if_statement_start         go to state 32
    if_statement               go to state 33
    for_statement              go to state 34
    while_statement            go to state 35
    return_statement           go to state 36
    break_statement            go to state 37
    continue_statement         go to state 38
    assignment_target          go to state 39
    assignment                 go to state 40
    basic_expression           go to state 41
    impure_expression          go to state 42
    postfix_expression         go to state 43
    slice                      go to state 44
    subscript                  go to state 45
    postcrement                go to state 46
    function_call              go to state 47
    property_call              go to state 48
    method_call                go to state 49
    dollar_call                go to state 50
    unary_expression           go to state 51
    precrement                 go to state 52
    cast                       go to state 53
    multiplication_priority    go to state 54
    addition_priority          go to state 55
    comparable                 go to state 56
    format_call                go to state 57
    conjunction_priority       go to state 58
    disjunction_priority       go to state 59
    ternary_priority           go to state 60
    comparison_priority        go to state 61
    equality_priority          go to state 62
    non_assignment_expression  go to state 63
    literal                    go to state 64
    scalar_literal             go to state 65
    list_literal               go to state 66
    dic_literal                go to state 67
    variable                   go to state 68
    template                   go to state 69
    template_expression        go to state 70


State 1

   57 basic_expression: '(' . expression ')'
   90 cast: '(' . "'bool'" ')' basic_expression
   91     | '(' . "'int'" ')' basic_expression
   92     | '(' . "'uint'" ')' basic_expression
   93     | '(' . "'intlist'" ')' basic_expression
   94     | '(' . "'real'" ')' basic_expression
   95     | '(' . "'string'" ')' basic_expression
   96     | '(' . "'obj'" ')' basic_expression
   97     | '(' . "'objlist'" ')' basic_expression
   98     | '(' . "'datetime'" ')' basic_expression
   99     | '(' . "'date'" ')' basic_expression
  100     | '(' . "'time'" ')' basic_expression

    '('               shift, and go to state 1
    '['               shift, and go to state 2
    '{'               shift, and go to state 3
    '.'               shift, and go to state 4
    "int literal"     shift, and go to state 5
    "real literal"    shift, and go to state 6
    "string literal"  shift, and go to state 8
    "null literal"    shift, and go to state 9
    '+'               shift, and go to state 10
    "'++'"            shift, and go to state 11
    '-'               shift, and go to state 12
    "'--'"            shift, and go to state 13
    '!'               shift, and go to state 14
    "'function'"      shift, and go to state 20
    "'bool'"          shift, and go to state 71
    "'int'"           shift, and go to state 72
    "'uint'"          shift, and go to state 73
    "'intlist'"       shift, and go to state 74
    "'real'"          shift, and go to state 75
    "'string'"        shift, and go to state 76
    "'obj'"           shift, and go to state 77
    "'objlist'"       shift, and go to state 78
    "'datetime'"      shift, and go to state 79
    "'date'"          shift, and go to state 80
    "'time'"          shift, and go to state 81
    "name"            shift, and go to state 22
    "$NUM"            shift, and go to state 24
    "$NAME"           shift, and go to state 25

    lambda_block               go to state 29
    lambda                     go to state 30
    expression                 go to state 82
    assignment_target          go to state 39
    assignment                 go to state 83
    basic_expression           go to state 41
    postfix_expression         go to state 43
    slice                      go to state 44
    subscript                  go to state 45
    postcrement                go to state 84
    function_call              go to state 85
    property_call              go to state 48
    method_call                go to state 86
    dollar_call                go to state 50
    unary_expression           go to state 51
    precrement                 go to state 87
    cast                       go to state 53
    multiplication_priority    go to state 54
    addition_priority          go to state 55
    comparable                 go to state 56
    format_call                go to state 57
    conjunction_priority       go to state 58
    disjunction_priority       go to state 59
    ternary_priority           go to state 60
    comparison_priority        go to state 61
    equality_priority          go to state 62
    non_assignment_expression  go to state 88
    literal                    go to state 64
    scalar_literal             go to state 65
    list_literal               go to state 66
    dic_literal                go to state 67
    variable                   go to state 68


State 2

  153 list_literal: '[' . optional_arglist ']'

    '('               shift, and go to state 1
    '['               shift, and go to state 2
    '{'               shift, and go to state 3
    '.'               shift, and go to state 4
    "int literal"     shift, and go to state 5
    "real literal"    shift, and go to state 6
    "string literal"  shift, and go to state 8
    "null literal"    shift, and go to state 9
    '+'               shift, and go to state 10
    "'++'"            shift, and go to state 11
    '-'               shift, and go to state 12
    "'--'"            shift, and go to state 13
    '!'               shift, and go to state 14
    "'function'"      shift, and go to state 20
    "name"            shift, and go to state 22
    "$NUM"            shift, and go to state 24
    "$NAME"           shift, and go to state 25

    $default  reduce using rule 39 (optional_arglist)

    lambda_block               go to state 29
    lambda                     go to state 30
    arglist                    go to state 89
    optional_arglist           go to state 90
    expression                 go to state 91
    assignment_target          go to state 39
    assignment                 go to state 83
    basic_expression           go to state 41
    postfix_expression         go to state 43
    slice                      go to state 44
    subscript                  go to state 45
    postcrement                go to state 84
    function_call              go to state 85
    property_call              go to state 48
    method_call                go to state 86
    dollar_call                go to state 50
    unary_expression           go to state 51
    precrement                 go to state 87
    cast                       go to state 53
    multiplication_priority    go to state 54
    addition_priority          go to state 55
    comparable                 go to state 56
    format_call                go to state 57
    conjunction_priority       go to state 58
    disjunction_priority       go to state 59
    ternary_priority           go to state 60
    comparison_priority        go to state 61
    equality_priority          go to state 62
    non_assignment_expression  go to state 88
    literal                    go to state 64
    scalar_literal             go to state 65
    list_literal               go to state 66
    dic_literal                go to state 67
    variable                   go to state 68


State 3

   12 lambda_block: '{' . expression '}'
   13             | '{' . statements_with_return '}'
   14             | '{' . non_return_statements '}'
  158 dic_literal: '{' . kv_pairs '}'

    '('               shift, and go to state 1
    '['               shift, and go to state 2
    '{'               shift, and go to state 3
    '.'               shift, and go to state 4
    "int literal"     shift, and go to state 5
    "real literal"    shift, and go to state 6
    "string literal"  shift, and go to state 92
    "null literal"    shift, and go to state 9
    '+'               shift, and go to state 10
    "'++'"            shift, and go to state 11
    '-'               shift, and go to state 12
    "'--'"            shift, and go to state 13
    '!'               shift, and go to state 14
    "'if'"            shift, and go to state 15
    "'for'"           shift, and go to state 16
    "'while'"         shift, and go to state 17
    "'break'"         shift, and go to state 18
    "'continue'"      shift, and go to state 19
    "'function'"      shift, and go to state 20
    "'return'"        shift, and go to state 21
    "name"            shift, and go to state 93
    "$NUM"            shift, and go to state 24
    "$NAME"           shift, and go to state 25

    non_return_statements      go to state 94
    statements_with_return     go to state 95
    lambda_block               go to state 29
    lambda                     go to state 30
    non_return_statement       go to state 31
    if_statement_start         go to state 32
    if_statement               go to state 33
    for_statement              go to state 34
    while_statement            go to state 35
    return_statement           go to state 36
    break_statement            go to state 37
    continue_statement         go to state 38
    expression                 go to state 96
    assignment_target          go to state 39
    assignment                 go to state 97
    basic_expression           go to state 41
    impure_expression          go to state 42
    postfix_expression         go to state 43
    slice                      go to state 44
    subscript                  go to state 45
    postcrement                go to state 46
    function_call              go to state 47
    property_call              go to state 48
    method_call                go to state 49
    dollar_call                go to state 50
    unary_expression           go to state 51
    precrement                 go to state 52
    cast                       go to state 53
    multiplication_priority    go to state 54
    addition_priority          go to state 55
    comparable                 go to state 56
    format_call                go to state 57
    conjunction_priority       go to state 58
    disjunction_priority       go to state 59
    ternary_priority           go to state 60
    comparison_priority        go to state 61
    equality_priority          go to state 62
    non_assignment_expression  go to state 88
    literal                    go to state 64
    scalar_literal             go to state 65
    list_literal               go to state 66
    kv_key                     go to state 98
    kv_pairs                   go to state 99
    dic_literal                go to state 67
    variable                   go to state 68


State 4

   76 property_call: '.' . "name"
   78 method_call: '.' . basic_expression '(' optional_arglist ')'

    '('               shift, and go to state 100
    '['               shift, and go to state 2
    '{'               shift, and go to state 3
    "int literal"     shift, and go to state 5
    "real literal"    shift, and go to state 6
    "string literal"  shift, and go to state 8
    "null literal"    shift, and go to state 9
    "'function'"      shift, and go to state 20
    "name"            shift, and go to state 101
    "$NUM"            shift, and go to state 24
    "$NAME"           shift, and go to state 25

    lambda_block      go to state 29
    lambda            go to state 30
    basic_expression  go to state 102
    dollar_call       go to state 50
    literal           go to state 64
    scalar_literal    go to state 65
    list_literal      go to state 66
    dic_literal       go to state 67
    variable          go to state 103


State 5

  149 scalar_literal: "int literal" .

    $default  reduce using rule 149 (scalar_literal)


State 6

  150 scalar_literal: "real literal" .

    $default  reduce using rule 150 (scalar_literal)


State 7

  162 template_expression: "template literal substring" .

    $default  reduce using rule 162 (template_expression)


State 8

  151 scalar_literal: "string literal" .

    $default  reduce using rule 151 (scalar_literal)


State 9

  152 scalar_literal: "null literal" .

    $default  reduce using rule 152 (scalar_literal)


State 10

   86 unary_expression: '+' . unary_expression

    '('               shift, and go to state 1
    '['               shift, and go to state 2
    '{'               shift, and go to state 3
    '.'               shift, and go to state 4
    "int literal"     shift, and go to state 5
    "real literal"    shift, and go to state 6
    "string literal"  shift, and go to state 8
    "null literal"    shift, and go to state 9
    '+'               shift, and go to state 10
    "'++'"            shift, and go to state 11
    '-'               shift, and go to state 12
    "'--'"            shift, and go to state 13
    '!'               shift, and go to state 14
    "'function'"      shift, and go to state 20
    "name"            shift, and go to state 22
    "$NUM"            shift, and go to state 24
    "$NAME"           shift, and go to state 25

    lambda_block        go to state 29
    lambda              go to state 30
    basic_expression    go to state 41
    postfix_expression  go to state 104
    slice               go to state 44
    subscript           go to state 45
    postcrement         go to state 84
    function_call       go to state 85
    property_call       go to state 105
    method_call         go to state 86
    dollar_call         go to state 50
    unary_expression    go to state 106
    precrement          go to state 87
    cast                go to state 53
    literal             go to state 64
    scalar_literal      go to state 65
    list_literal        go to state 66
    dic_literal         go to state 67
    variable            go to state 103


State 11

   88 precrement: "'++'" . unary_expression

    '('               shift, and go to state 1
    '['               shift, and go to state 2
    '{'               shift, and go to state 3
    '.'               shift, and go to state 4
    "int literal"     shift, and go to state 5
    "real literal"    shift, and go to state 6
    "string literal"  shift, and go to state 8
    "null literal"    shift, and go to state 9
    '+'               shift, and go to state 10
    "'++'"            shift, and go to state 11
    '-'               shift, and go to state 12
    "'--'"            shift, and go to state 13
    '!'               shift, and go to state 14
    "'function'"      shift, and go to state 20
    "name"            shift, and go to state 22
    "$NUM"            shift, and go to state 24
    "$NAME"           shift, and go to state 25

    lambda_block        go to state 29
    lambda              go to state 30
    basic_expression    go to state 41
    postfix_expression  go to state 104
    slice               go to state 44
    subscript           go to state 45
    postcrement         go to state 84
    function_call       go to state 85
    property_call       go to state 105
    method_call         go to state 86
    dollar_call         go to state 50
    unary_expression    go to state 107
    precrement          go to state 87
    cast                go to state 53
    literal             go to state 64
    scalar_literal      go to state 65
    list_literal        go to state 66
    dic_literal         go to state 67
    variable            go to state 103


State 12

   85 unary_expression: '-' . unary_expression

    '('               shift, and go to state 1
    '['               shift, and go to state 2
    '{'               shift, and go to state 3
    '.'               shift, and go to state 4
    "int literal"     shift, and go to state 5
    "real literal"    shift, and go to state 6
    "string literal"  shift, and go to state 8
    "null literal"    shift, and go to state 9
    '+'               shift, and go to state 10
    "'++'"            shift, and go to state 11
    '-'               shift, and go to state 12
    "'--'"            shift, and go to state 13
    '!'               shift, and go to state 14
    "'function'"      shift, and go to state 20
    "name"            shift, and go to state 22
    "$NUM"            shift, and go to state 24
    "$NAME"           shift, and go to state 25

    lambda_block        go to state 29
    lambda              go to state 30
    basic_expression    go to state 41
    postfix_expression  go to state 104
    slice               go to state 44
    subscript           go to state 45
    postcrement         go to state 84
    function_call       go to state 85
    property_call       go to state 105
    method_call         go to state 86
    dollar_call         go to state 50
    unary_expression    go to state 108
    precrement          go to state 87
    cast                go to state 53
    literal             go to state 64
    scalar_literal      go to state 65
    list_literal        go to state 66
    dic_literal         go to state 67
    variable            go to state 103


State 13

   89 precrement: "'--'" . unary_expression

    '('               shift, and go to state 1
    '['               shift, and go to state 2
    '{'               shift, and go to state 3
    '.'               shift, and go to state 4
    "int literal"     shift, and go to state 5
    "real literal"    shift, and go to state 6
    "string literal"  shift, and go to state 8
    "null literal"    shift, and go to state 9
    '+'               shift, and go to state 10
    "'++'"            shift, and go to state 11
    '-'               shift, and go to state 12
    "'--'"            shift, and go to state 13
    '!'               shift, and go to state 14
    "'function'"      shift, and go to state 20
    "name"            shift, and go to state 22
    "$NUM"            shift, and go to state 24
    "$NAME"           shift, and go to state 25

    lambda_block        go to state 29
    lambda              go to state 30
    basic_expression    go to state 41
    postfix_expression  go to state 104
    slice               go to state 44
    subscript           go to state 45
    postcrement         go to state 84
    function_call       go to state 85
    property_call       go to state 105
    method_call         go to state 86
    dollar_call         go to state 50
    unary_expression    go to state 109
    precrement          go to state 87
    cast                go to state 53
    literal             go to state 64
    scalar_literal      go to state 65
    list_literal        go to state 66
    dic_literal         go to state 67
    variable            go to state 103


State 14

   87 unary_expression: '!' . unary_expression

    '('               shift, and go to state 1
    '['               shift, and go to state 2
    '{'               shift, and go to state 3
    '.'               shift, and go to state 4
    "int literal"     shift, and go to state 5
    "real literal"    shift, and go to state 6
    "string literal"  shift, and go to state 8
    "null literal"    shift, and go to state 9
    '+'               shift, and go to state 10
    "'++'"            shift, and go to state 11
    '-'               shift, and go to state 12
    "'--'"            shift, and go to state 13
    '!'               shift, and go to state 14
    "'function'"      shift, and go to state 20
    "name"            shift, and go to state 22
    "$NUM"            shift, and go to state 24
    "$NAME"           shift, and go to state 25

    lambda_block        go to state 29
    lambda              go to state 30
    basic_expression    go to state 41
    postfix_expression  go to state 104
    slice               go to state 44
    subscript           go to state 45
    postcrement         go to state 84
    function_call       go to state 85
    property_call       go to state 105
    method_call         go to state 86
    dollar_call         go to state 50
    unary_expression    go to state 110
    precrement          go to state 87
    cast                go to state 53
    literal             go to state 64
    scalar_literal      go to state 65
    list_literal        go to state 66
    dic_literal         go to state 67
    variable            go to state 103


State 15

   27 if_statement_start: "'if'" . '(' expression ')' statement_block

    '('  shift, and go to state 111


State 16

   31 for_statement: "'for'" . '(' optional_arglist ';' optional_arglist ';' optional_arglist ')' statement_block

    '('  shift, and go to state 112


State 17

   32 while_statement: "'while'" . '(' expression ')' statement_block

    '('  shift, and go to state 113


State 18

   35 break_statement: "'break'" . ';'

    ';'  shift, and go to state 114


State 19

   36 continue_statement: "'continue'" . ';'

    ';'  shift, and go to state 115


State 20

   18 lambda: "'function'" . '(' namelist ')' lambda_block

    '('  shift, and go to state 116


State 21

   33 return_statement: "'return'" . ';'
   34                 | "'return'" . non_assignment_expression ';'

    '('               shift, and go to state 1
    '['               shift, and go to state 2
    '{'               shift, and go to state 3
    '.'               shift, and go to state 4
    ';'               shift, and go to state 117
    "int literal"     shift, and go to state 5
    "real literal"    shift, and go to state 6
    "string literal"  shift, and go to state 8
    "null literal"    shift, and go to state 9
    '+'               shift, and go to state 10
    "'++'"            shift, and go to state 11
    '-'               shift, and go to state 12
    "'--'"            shift, and go to state 13
    '!'               shift, and go to state 14
    "'function'"      shift, and go to state 20
    "name"            shift, and go to state 22
    "$NUM"            shift, and go to state 24
    "$NAME"           shift, and go to state 25

    lambda_block               go to state 29
    lambda                     go to state 30
    basic_expression           go to state 41
    postfix_expression         go to state 104
    slice                      go to state 44
    subscript                  go to state 45
    postcrement                go to state 84
    function_call              go to state 85
    property_call              go to state 105
    method_call                go to state 86
    dollar_call                go to state 50
    unary_expression           go to state 51
    precrement                 go to state 87
    cast                       go to state 53
    multiplication_priority    go to state 54
    addition_priority          go to state 55
    comparable                 go to state 56
    format_call                go to state 57
    conjunction_priority       go to state 58
    disjunction_priority       go to state 59
    ternary_priority           go to state 60
    comparison_priority        go to state 61
    equality_priority          go to state 62
    non_assignment_expression  go to state 118
    literal                    go to state 64
    scalar_literal             go to state 65
    list_literal               go to state 66
    dic_literal                go to state 67
    variable                   go to state 103


State 22

  159 variable: "name" .

    $default  reduce using rule 159 (variable)


State 23

  163 template_expression: "$(" . expression ')'
  164                    | "$(" . statements_with_return ')'

    '('               shift, and go to state 1
    '['               shift, and go to state 2
    '{'               shift, and go to state 3
    '.'               shift, and go to state 4
    "int literal"     shift, and go to state 5
    "real literal"    shift, and go to state 6
    "string literal"  shift, and go to state 8
    "null literal"    shift, and go to state 9
    '+'               shift, and go to state 10
    "'++'"            shift, and go to state 11
    '-'               shift, and go to state 12
    "'--'"            shift, and go to state 13
    '!'               shift, and go to state 14
    "'if'"            shift, and go to state 15
    "'for'"           shift, and go to state 16
    "'while'"         shift, and go to state 17
    "'break'"         shift, and go to state 18
    "'continue'"      shift, and go to state 19
    "'function'"      shift, and go to state 20
    "'return'"        shift, and go to state 21
    "name"            shift, and go to state 22
    "$NUM"            shift, and go to state 24
    "$NAME"           shift, and go to state 25

    non_return_statements      go to state 119
    statements_with_return     go to state 120
    lambda_block               go to state 29
    lambda                     go to state 30
    non_return_statement       go to state 31
    if_statement_start         go to state 32
    if_statement               go to state 33
    for_statement              go to state 34
    while_statement            go to state 35
    return_statement           go to state 36
    break_statement            go to state 37
    continue_statement         go to state 38
    expression                 go to state 121
    assignment_target          go to state 39
    assignment                 go to state 97
    basic_expression           go to state 41
    impure_expression          go to state 42
    postfix_expression         go to state 43
    slice                      go to state 44
    subscript                  go to state 45
    postcrement                go to state 46
    function_call              go to state 47
    property_call              go to state 48
    method_call                go to state 49
    dollar_call                go to state 50
    unary_expression           go to state 51
    precrement                 go to state 52
    cast                       go to state 53
    multiplication_priority    go to state 54
    addition_priority          go to state 55
    comparable                 go to state 56
    format_call                go to state 57
    conjunction_priority       go to state 58
    disjunction_priority       go to state 59
    ternary_priority           go to state 60
    comparison_priority        go to state 61
    equality_priority          go to state 62
    non_assignment_expression  go to state 88
    literal                    go to state 64
    scalar_literal             go to state 65
    list_literal               go to state 66
    dic_literal                go to state 67
    variable                   go to state 68


State 24

   80 dollar_call: "$NUM" .

    $default  reduce using rule 80 (dollar_call)


State 25

   81 dollar_call: "$NAME" .
